# omnichat

./: .omnichat.toml  Cargo.toml  LICENSE  README.md  TODO  build.rs
.circleci/: Dockerfile  config.yml
discord/: Cargo.toml
discord/src/: gateway.rs  lib.rs
slack/: Cargo.toml  README.md  id.txt
slack/benches/: history.rs  id.rs
slack/src/: id.rs  lib.rs  timestamp.rs
slack/src/http/: api.rs  auth.rs  bots.rs  channels.rs  chat.rs  conversations.rs  dnd.rs  emoji.rs  files.rs  groups.rs  im.rs  mod.rs  mpim.rs  oauth.rs  pins.rs  reactions.rs  reminders.rs  rtm.rs  search.rs  stars.rs  team.rs  team_profile.rs  usergroups.rs  usergroups_users.rs  users.rs  users_profile.rs
slack/src/rtm/: event.rs  message.rs  mod.rs
src/: bimap.rs  chan_message.rs  conn.rs  curses.rs  cursor_vec.rs  discord_conn.rs  irc_conn.rs  logger.rs  main.rs  pushbullet_conn.rs  slack_conn.rs  tui.rs
tiny_slack/: Cargo.toml
tiny_slack/src/: id.rs  lib.rs  timestamp.rs
tiny_slack/src/http/: channels.rs  conversations.rs  emoji.rs  groups.rs  im.rs  mod.rs  reactions.rs  rtm.rs  users.rs
tiny_slack/src/rtm/: event.rs  message.rs  mod.rs
