[package]
name = "omnichat"
version = "0.0.0"
authors = ["Ben Kimock <kimockb@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
toml = "0.5"
lazy_static = "1.0"
regex-automata = "0.1"
chrono = "0.4"
log = {version="0.4", features=["std"]}
termion = "1.5"
libc = "0.2"
textwrap = "0.11"
dirs = "2.0"
serde_urlencoded = "0.6"
tokio = {version = "0.2", features = ["full"]}
futures = {version = "0.3", default-features = false, features = ["std", "async-await"]}
slack = {path = "tiny_slack"}
weeqwest = {git = "https://github.com/saethlin/weeqwest"}
weebsocket = {git = "https://github.com/saethlin/weebsocket"}

[build-dependencies]
regex-automata = "0.1"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = 1
lto = "fat"
