[package]
authors = ["Benjamin Elder <ben.the.elder@gmail.com>", "Matt Jones <mthjones@gmail.com>", "Benjamin Kimock <kimockb@gmail.com>"]
description = "Interface for the Slack Web API"
license = "Apache-2.0"
name = "slack"
version = "0.0.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
derive-new = "0.5"

[dependencies.uuid]
version = "0.7"
default-features = false
features = ["serde"]
